correccion de imagenes

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logoriginal.png" width="120" height="120"
-          alt=""> Keo Tecnologia</a>
+    <div class="container"><a href="https://www.keo.cl/">  <img src="img/logoriginal.png" width="170" height="100" alt="KEO"></a>
+    
+      <a class="navbar-brand js-scroll-trigger" style="font-size: 30px;" href="#page-top">Tecnologia</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -171,7 +171,7 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
           </span> -->
-          <img src="img/services/6.JPG" style="object-fit: cover;" width="300" height="200" alt="">
+          <img src="img/services/6.jpg" style="object-fit: cover;" width="300" height="200" alt="">
           <h4 class="service-heading">Diseño e Implementacion</h4>
           <p class="text-muted">Desarrollamos diseños a la medidad según los requerimientos y necesidades
             de cada proyecto..</p>
@@ -192,7 +192,7 @@
             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
           </span> -->
           <div>
-            <img src="img/services/5.JPG" style="object-fit: cover;" width="300" height="200" alt="">
+            <img src="img/services/5.jpg" style="object-fit: cover;" width="300" height="200" alt="">
           </div>
           <h4 class="service-heading">Asesoría y Acompañamiento</h4>
           <p class="text-muted">Asesorias personalizadas que le permitan a nuestros clientes tomar la mejor decisión
@@ -341,11 +341,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img  src="" style="object-fit: cover;"  width="250" height="120" alt="">
+            <img class="img-fluid jh-img-porta" src="img/portfolio/personal.png" style="object-fit: cover;" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Saddi Tecnology</h4>
-            <p class="text-muted">Septiembre 2020</p>
+            <h4>Portafolio Personal</h4>
+            <p class="text-muted">Septiembre 2018</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -533,37 +533,8 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="" style="object-fit: cover;" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/jose.png" style="object-fit: cover;" alt="">
             <h4>Jose Hernandez</h4>
-            <p class="text-muted">Keo Tecnologia</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="" target="_blank">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="" target="_blank">
-                  <i class="fab fa-instagram"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="" target="_blank">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="" style="object-fit: cover;" alt="">
-            <h4>Javier Blanco</h4>
             <p class="text-muted">Keo Tecnologia</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
@@ -618,6 +589,35 @@
             </ul>
           </div>
         </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/javier.png" style="object-fit: cover;" alt="">
+            <h4>Javier Blanco</h4>
+            <p class="text-muted">Keo Tecnologia</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="" target="_blank">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="" target="_blank">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="" target="_blank">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="" target="_blank">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
@@ -630,21 +630,22 @@
 
   <!-- Clients -->
   <section class="py-3">
-    <div class="contdainer" style="display: flex; flex-wrap: wrap; justify-content: center;">
+    <div class="contdainer" >
 
       <a href="#" target="_blank">
-        <img class="img-fluid my-3 mx-4" src="img/portfolio/logo sadi.png" style="width: 300px; height: 200px;" alt="">
+        <img class="img-fluid my-3 mx-4" src="img/portfolio/logo sadi.png" style="width: 300px; height: 150px;" alt="">
       </a>
-      <a href="http://construccionindustrializada.cl/" target="_blank">
-        <img class="img-fluid my-3 mx-4" src="img/portfolio/logo andes.png" style="width: 300px; height: 200px;" alt="">
+      <a href="http://andesglasswall.com/" target="_blank">
+        <img class="img-fluid my-3 mx-4" src="img/portfolio/logo andes.png" style="width: 150; height: 150px;" alt="">
       </a>
-      <a href="https://www.alchile.cl/" target="_blank">
-        <img class="img-fluid my-3 mx-4" src="img/portfolio/logo gummy.png" style="width: 300px; height: 200px;" alt="">
+      <a href="https://www.instagram.com/background.cl/" target="_blank">
+        <img class="img-fluid my-3 mx-4" src="img/logos/logo-01.jpg" style="width: 150px; height: 150px;" alt="">
       </a>
-      <!-- <a href="https://www.vidrioslirquen.cl/" target="_blank">
-        <img class="img-fluid my-3 mx-4" src="img/logos/26.png" style="width: 160px; height: 60px;" alt="">
+      <a href="https://www.mundogummy.cl/" target="_blank">
+        <img class="img-fluid my-3 mx-4" src="img/logos/GUMMY.png" style="width: 300px; height: 100px;" alt="">
       </a>
-      <a href="https://www.ccs.cl/" target="_blank">
+     
+     <!--  <a href="https://www.ccs.cl/" target="_blank">
         <img class="img-fluid my-3 mx-4" src="img/logos/CCS-logo-2020.png" style="width: 180px; height: 60px;" alt="">
       </a>
       <a href="https://chl.sika.com/" target="_blank">
@@ -742,7 +743,7 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="https://www.instagram.com/andesglasswall/" target="_blank">
+              <a href="https://www.keo.cl/" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
