correcion de acentos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container"><a href="https://www.keo.cl/">  <img src="img/logoriginal.png" width="170" height="100" alt="KEO"></a>
     
-      <a class="navbar-brand js-scroll-trigger" style="font-size: 30px;" href="#page-top">Tecnologia</a>
+      <a class="navbar-brand js-scroll-trigger" style="font-size: 30px;" href="#page-top">Tecnología</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -132,7 +132,7 @@
           <img src="img/fondo6.jpg" style="filter: brightness(50%); height: 100vh; object-fit: cover;" class="d-block w-100" alt="Andes Glass Wall">
           <div class="carousel-caption d-md-block" style="bottom: 35vh !important;">
             <h3>PLAN EMPRENDEDORES</h3>
-            <p>Serviciosy planes que se adaptan a ti...</p>
+            <p>Servicios y planes que se adaptan a ti...</p>
           </div>
         </div>
       </div>
