--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="icon" type="image/x-icon" href="img/Logo.png">
+  <link rel="icon" type="image/x-icon" href="img/Logo3.ico">
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -74,7 +74,7 @@
         </ul>
       </div>
       <div>
-        <a href="https://wa.me/56957858732/?text=Hola!%20quiero%20obtener%20mas%20informacion%20acerca%20de:" target="_blank">
+        <a href="https://wa.me/56921206002/?text=Hola!%20quiero%20obtener%20mas%20informacion%20acerca%20de:" target="_blank">
           <img src="img/logos/logo wht1.png" width="80" height="80">
        </a>
       </div>
@@ -167,37 +167,48 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <!-- <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-          </span> -->
-          <img src="img/services/6.jpg" style="object-fit: cover;" width="300" height="200" alt="">
-          <h4 class="service-heading">Diseño e Implementacion</h4>
-          <p class="text-muted">Desarrollamos diseños a la medidad según los requerimientos y necesidades
-            de cada proyecto..</p>
-        </div>
+          <div class="card rounded-10px" style="width: 18rem;"> 
+            <img class="card-img-top" src="img/services/6.jpg"  alt="Card image cap">
+             <div class="card-body">
+             <!-- <span class="fa-stack fa-4x">
+             <i class="fas fa-circle fa-stack-2x text-primary"></i>
+             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+             </span> -->
+             <h4 class="service-heading card-title">Diseño e Implementacion</h4>
+             <p class="text-muted card-text">Desarrollamos diseños a la medidad según los requerimientos y necesidades
+             de cada proyecto..</p>
+           </div>
+         </div>
+       </div>
         <div class="col-md-4">
-          <!-- <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-          </span> -->
-          <img src="img/services/2.png" width="300" style="object-fit: cover;" height="200" alt="">
-          <h4 class="service-heading"> Instalación y Adaptacion</h4>
-          <p class="text-muted">Procesos según los requerimientos y
-            necesidades de cada proyecto para un servicio con un alto compromiso de seguridad y calidad.</p>
-        </div>
-        <div class="col-md-4">
-          <!-- <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-          </span> -->
-          <div>
-            <img src="img/services/5.jpg" style="object-fit: cover;" width="300" height="200" alt="">
+          <div class="card rounded" style="width: 18rem;">
+            <img class="card-img-top" src="img/services/2.png" alt="Card image cap">
+            <div class="card-body">
+             <!-- <span class="fa-stack fa-4x">
+             <i class="fas fa-circle fa-stack-2x text-primary"></i>
+             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+             </span> -->
+             <h4 class="service-heading card-title"> Instalación y Adaptacion</h4>
+              <p class="card-text text-muted"> Cubrimos los requerimientos y
+              necesidades de cada proyecto con un alto compromiso de seguridad y calidad.</p>
+            </div>
           </div>
-          <h4 class="service-heading">Asesoría y Acompañamiento</h4>
-          <p class="text-muted">Asesorias personalizadas que le permitan a nuestros clientes tomar la mejor decisión
-            para su proyecto con el menor costo posible sin bajar calidad y
-            prestaciones, incluyendo un servicio de atención y mantención de nuestros trabajos.</p>
+        </div>
+        <div class="col-md-4">
+          <div class="card rounded" style="width: 18rem;"> 
+            <img class="card-img-top" src="img/services/5.jpg" alt="Card image cap">
+            <div class="card-body">
+              <!-- <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+             </span> -->
+             <div>
+             </div>
+             <h4 class="service-heading card-title">Asesoría y Acompañamiento</h4>
+             <p class="text-muted card-text">Asesorias personalizadas
+             para su proyecto con el menor costo posible sin bajar calidad.</p>
+          </div>
+        </div>
         </div>
       </div>
     </div>
@@ -684,10 +695,11 @@
   </section>
 
   <!-- Contact -->
+
   <section class="page-section" id="contact">
-    <div class="container">
+    <div class="container " >
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-xl text-center">
           <h2 class="section-heading text-uppercase">Contactanos</h2>
           <h3 class="section-subheading text-muted" style="color: aliceblue !important"></h3>
         </div>
@@ -738,7 +750,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; 2021 Todos los derechos reservados</span>
+          <span class="copyright">Copyright &copy; 2021 Todos los Derechos reservados</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
