--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/jose.png" style="object-fit: cover;" alt="">
-            <h4>Jose Hernandez</h4>
+            <img class="mx-auto rounded-circle" src="img/team/javier.png" style="object-fit: cover;" alt="">
+            <h4>Javier Blanco</h4>
             <p class="text-muted">Keo Tecnologia</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
